# Rocket-API-Starter

./: .env  Cargo.toml  README.md
migrations/2018-02-01-090111_create_todos_table/: up.sql
src/: database.rs  main.rs  models.rs
src/app/: errors.rs  index.rs  mod.rs  todo.rs
