[package]
name = "rocket-api-starter"
version = "0.1.0"
authors = ["xjw0914 <contactxjw@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0", features = ["mysql", "chrono"] }
diesel_cli = { version = "1.0", features = ["mysql"] }
diesel_infer_schema = "1.0"
dotenv = "0.11.0"
dotenv_codegen = "0.11.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
chrono = "0.4.0"
